--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   shared_preferences: ^2.0.13
   flutter_native_splash: ^2.3.9
   flutter_barcode_scanner : ^2.0.0
+  intl: ^0.19.0
+  cached_network_image: ^3.3.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
