--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   flutter_barcode_scanner : ^2.0.0
   intl: ^0.19.0
   cached_network_image: ^3.3.1
+  url_launcher: ^6.2.4
 dev_dependencies:
   flutter_test:
     sdk: flutter
